Changes to run on Java 11 / JavaFX 11.